--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=project_springboot_jpa_crud_app
 
 #Configuracion  de la Base de Datos
-spring.datasource.url=jdbc:mysql://localhost:3306/db_asociaciones
+spring.datasource.url=jdbc:mysql://localhost:3306/db_api_crud
 spring.datasource.username=root
 spring.datasource.password=96122325463
 
