--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,4 +1,6 @@
-NotBlank.product.description=es requerido por favor !
 NotEmpty.product.name=es requerido!
-NotNull.product.price=no puede ser nulo ok!
-Min.product.price=el valor debe ser mayor a 500!
+NotBlank.product.description=es requerido, por favor
+NotNull.product.price=no puede ser nulo, ok!
+Min.product.price=debe ser un valor numerico mayor o igual que 500!
+IsRequired.product.name=es requerido usando anotaciones, mensaje en properties!
+
